# openkite

./: CMakeLists.txt  README.md  package.xml
arduino/: pwm_ppm.ino
cmake/: FindCASADI.cmake
data/: easy_glider_4.yaml  eg4.yaml  eg4_xflr.yaml  eg4_xflrBet_1P.yaml  umx_radian.yaml
launch/: hw_in_the_loop.launch  kite.launch  simulator.launch
meshes/: simple_airplane.dae
msg/: aircraft_controls.msg  gs.msg  mpc_diagnostic.msg
scripts/matlab/: cheb.m  dre.m  ekf_test.m  kiteEKF.m  kite_collocation.m  kite_sim.m  kite_validation.m  optitrack2world.m  quatinv.m  quatmul.m  rigid_body.m  sphere_fit_3d.m  ss_solver.m  test_cheb.m  validation_script.m
scripts/python/: crazyflie_calibration.py  rosbag_parser.py
src/: casadi_test.cpp
src/bifoiler/: CMakeLists.txt  boat_math.cpp  boat_math.h  boat_model.cpp  boat_model.h  boat_properties.cpp  boat_properties.h
src/kite_control/: CMakeLists.txt  bifoiler_identification.cpp  car_model_test.cpp  kinematic_robot.cpp  kinematic_robot.hpp  kiteNMPF.cpp  kiteNMPF.h  kite_control_test.cpp  kite_identification_test.cpp  manifold_learning.cpp  mobile_robot.cpp  mobile_robot.h  nmpc.hpp  nmpc_node.cpp  nmpc_node.hpp  nmpf.hpp  nmpf_node.cpp  nmpf_node.hpp  spline_following.cpp  stochastic_kite.cpp  stochastic_kite.hpp
src/kite_estimation/: CMakeLists.txt  ekf_node.cpp  ekf_node.h  kiteEKF.cpp  kiteEKF.h
src/kite_math/: CMakeLists.txt  kitemath.cpp  kitemath.h
src/kite_math/homotopy/: CMakeLists.txt  psarc.hpp
src/kite_math/pseudospectral/: CMakeLists.txt  chebyshev.hpp
src/kite_model/: CMakeLists.txt  homotopy_test.cpp  integrator.cpp  integrator.h  kite.cpp  kite.h  kite_model_test.cpp  psarc_test.cpp  simulator.cpp  simulator.h
src/nodes/: CMakeLists.txt  control_proxy_node.cpp  control_proxy_node.hpp  kite_visualization_node.cpp  optitrack_client.cpp  simple_logger.cpp  simple_vrpn_client.cpp  simple_vrpn_client.h  test_publisher_node.cpp  test_subscriber_node.cpp  transport_delay.cpp  transport_delay_test.cpp
srv/: simple.srv  simple.srv~
